Finished Efforia platform

--- a/efforia/public/appearance.jade
+++ b/efforia/public/appearance.jade
@@ -15,27 +15,27 @@ form#control(action='appearance')
                 else
                         button.span1.btn.change(value='1') Simples
                         button.span2.btn.change.active(value='0') Avançado
-        label.span2.divider Língua
-        .btn-group.span3.divider.language(data-toggle='buttons-radio')
-                if language == 0
-                        button.span1.btn.change.active(value='0') Português
-                        button.span2.btn.change(value='1') Español
-                else
-                        button.span1.btn.change(value='0') Português
-                        button.span2.btn.change.active(value='1') Español
-        label.span2.divider Monetização
-        .btn-group.span3.divider.monetize(data-toggle='buttons-radio')
-                if monetize == 1
-                        button.span1.btn.change.active(value='1') Ativada
-                        button.span2.btn.change(value='0') Desativada
-                else
-                        button.span1.btn.change(value='1') Ativada
-                        button.span2.btn.change.active(value='0') Desativada
-        label.span2.divider Audiodescrição
-        .btn-group.span3.divider.monetize(data-toggle='buttons-radio')
-                if monetize == 1
-                        button.span1.btn.change.active(value='1') Ativada
-                        button.span2.btn.change(value='0') Desativada
-                else
-                        button.span1.btn.change(value='1') Ativada
-                        button.span2.btn.change.active(value='0') Desativada
+//        label.span2.divider Língua
+//        .btn-group.span3.divider.language(data-toggle='buttons-radio')
+//                if language == 0
+//                        button.span1.btn.change.active(value='0') Português
+//                        button.span2.btn.change(value='1') Español
+//                else
+//                        button.span1.btn.change(value='0') Português
+//                        button.span2.btn.change.active(value='1') Español
+//        label.span2.divider Monetização
+//        .btn-group.span3.divider.monetize(data-toggle='buttons-radio')
+//                if monetize == 1
+//                        button.span1.btn.change.active(value='1') Ativada
+//                        button.span2.btn.change(value='0') Desativada
+//                else
+//                        button.span1.btn.change(value='1') Ativada
+//                        button.span2.btn.change.active(value='0') Desativada
+//        label.span2.divider Audiodescrição
+//        .btn-group.span3.divider.monetize(data-toggle='buttons-radio')
+//                if monetize == 1
+//                        button.span1.btn.change.active(value='1') Ativada
+//                        button.span2.btn.change(value='0') Desativada
+//                else
+//                        button.span1.btn.change(value='1') Ativada
+//                        button.span2.btn.change.active(value='0') Desativada
