--- a/efforia/public/profile.jade
+++ b/efforia/public/profile.jade
@@ -10,4 +10,4 @@ form#profile(action='profile')
       label.span2 Aniversário
       input.span3.datepicker(name='birth',placeholder='#{birth}',type='text')
       #passwordchange
-      input#password.btn(value='Trocar a senha')
+      a#password.passwordchange.btn.btn-block Trocar a senha
