--- a/efforia/public/photo.jade
+++ b/efforia/public/photo.jade
@@ -1,3 +1,3 @@
-form#upload(style='text-align: center;', action='photo', method='post', accept-charset='utf-8', enctype='multipart/form-data')
-        img.upload(src='#{ static_url }img/upload.png',style='width:80%; height:80%; margin:10%;')
-        input.file(style='width:0; height:0; opacity: 0;',name='file',type='file')
+form#image(style='text-align: center', action='efforia/photo', method='post', accept-charset='utf-8', enctype='multipart/form-data')
+    input.span5.file(style='opacity: 0;', name='file', type='file')
+    img.upload(src='#{ static_url }img/upload.png')
