--- a/efforia/public/enter.pug
+++ b/efforia/public/enter.pug
@@ -110,8 +110,8 @@ html.no-js
               div(style='display:inline;') - Rua Antônio Joaquim Mesquita, 296 - Porto Alegre/RS - Brasil
     //
        /container 
-    script
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
+    //- script
+      //- var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+      //- (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+      //- g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+      //- s.parentNode.insertBefore(g,s)}(document,'script'));
