Changed some titles and requirements

--- a/efforia/public/enter.pug
+++ b/efforia/public/enter.pug
@@ -3,7 +3,7 @@ html.no-js
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    title Efforia
+    title Plethora
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width')
     link(rel='stylesheet', href='#{static_url}css/bootstrap.min.css')
@@ -109,7 +109,7 @@ html.no-js
               div(style='display:inline; font-weight:bold') Agência de Criação Efforia
               div(style='display:inline;') - Rua Antônio Joaquim Mesquita, 296 - Porto Alegre/RS - Brasil
     //
-       /container 
+       /container
     //- script
       //- var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
       //- (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
