--- a/efforia/public/index.pug
+++ b/efforia/public/index.pug
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    title Efforia
+    title Plethora
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width')
     link(rel='stylesheet', type='text/css', href='#{static_url}css/bootstrap.min.css')
@@ -60,7 +60,7 @@ html
                                   img(src='#{user.profile.visual}',width='100%')
                                   h2
                                       dl
-                                          dt  {{ user.first_name }} 
+                                          dt  {{ user.first_name }}
                                   .id.hidden #{user.profile.id}
                                 li
                                     .paypal.hidden
